--- a/app/src/main/res/layout/activity_saved.xml
+++ b/app/src/main/res/layout/activity_saved.xml
@@ -16,6 +16,13 @@
         android:padding="16dp">
 
         <!-- City Buttons -->
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="backToMainActivity"
+            android:text="BACK" />
+
         <LinearLayout
             android:id="@+id/buttonContainer"
             android:layout_width="match_parent"
